Update change commit

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,8 +1,9 @@
-# S? seri c?a thi?t b?
+# Device serial number
 driverSeri=emulator-5554
 
-# C?u hình app
+# App configuration
 phone=0352343004
 pass=Abc@123456
 viewSecond=30
 implicitlyWait=10
+dataPath=src/main/resources/Data/DataFile.xlsx
